Added dir history